# image-processing

./: .gitignore  Exercício_Filtragem.ipynb  Filtragem.ipynb  README.md
face-analysis/: pyproject.toml
face-analysis/app/: __init__.py
face-analysis/app/camera/: capture.py
face-analysis/app/core/config/: settings.py
face-analysis/app/infrastructure/repositories/camera/: capture.py
face-analysis/app/infrastructure/repositories/detector/: __init__.py  models.py
face-analysis/docs/: roadmap.md
notebooks/: Atividade_Segmentação_de_imagens_Parte_1.ipynb  Atividade_Segmentação_de_imagens_Parte_2.ipynb  ReconhecimentoFacial.ipynb
